<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/description_image_character"/>

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        android:layout_marginTop="@dimen/margin_8_size"
        android:layout_marginStart="@dimen/margin_8_size"
        android:textSize="@dimen/text_size_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"/>

    <TextView
        style="@style/TextStyleLabelCard"
        android:id="@+id/textViewLabelSpecies"
        android:textSize="@dimen/text_size_card"
        android:text="@string/text_label_species"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"/>

    <TextView
        style="@style/TextStyleCard"
        android:id="@+id/textViewSpecies"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        app:layout_constraintStart_toEndOf="@+id/textViewLabelSpecies"/>

    <TextView
        style="@style/TextStyleLabelCard"
        android:id="@+id/textViewLabelGender"
        android:text="@string/text_label_gender"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpecies"
        app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"/>

    <TextView
        style="@style/TextStyleCard"
        android:id="@+id/textViewGender"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpecies"
        app:layout_constraintStart_toEndOf="@+id/textViewLabelGender"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>